python/testData/highlighting/exceptStarAndExceptInTheSameTry.py
try:
    ...
except ValueError:
    pass
<error descr="Try statement cannot contain both except and except*">except*</error> CancelledError:
    pass
